added re browser logic